# octofin

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
schemas/: settings.schema.json
src/config/: admin.py  apps.py  models.py  serializers.py  settings.json  settings_loader.py  urls.py  utils.py  validators.py  views.py
src/octofin/: settings.py  urls.py
